Add new item functionality

--- a/todoey/Base.lproj/Main.storyboard
+++ b/todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="EzY-VL-pB9" id="kve-fP-qFW"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="mdg-XQ-4MZ"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="mdg-XQ-4MZ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="m8R-Rr-6qe">
+                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="EzY-VL-pB9" id="w4Z-gN-O22"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RWy-Ib-t5E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
